--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>Chapter_01</module>
         <module>Chapter_02</module>
+        <module>Chapter_03</module>
     </modules>
 
     <properties>
@@ -18,6 +19,7 @@
         <aspectJ.version>1.7.2</aspectJ.version>
         <mockito.version>1.9.5</mockito.version>
         <junit.version>4.11</junit.version>
+        <github.version>1.5.0</github.version>
     </properties>
 
     <dependencyManagement>
@@ -102,7 +104,7 @@
             <dependency>
                 <groupId>com.github.stefanbirkner</groupId>
                 <artifactId>system-rules</artifactId>
-                <version>1.5.0</version>
+                <version>${github.version}</version>
             </dependency>
 
         </dependencies>
