--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>Chapter_01</module>
         <module>Chapter_02</module>
         <module>Chapter_03</module>
+        <module>Chapter_04</module>
     </modules>
 
     <properties>
@@ -109,5 +110,29 @@
 
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                <!--<configuration>-->
+                    <!--<skip>true</skip>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
 
 </project>
